@@ -591,13 +591,11 @@ public class HiveConf extends Configuration {
    */
   public String getUser() throws IOException {
     try {
-      UserGroupInformation ugi = UserGroupInformation.readFrom(this);
-      if (ugi == null) {
-        ugi = UserGroupInformation.login(this);
-      }
+      UserGroupInformation ugi = ShimLoader.getHadoopShims()
+        .getUGIForConf(this);
       return ugi.getUserName();
-    } catch (LoginException e) {
-      throw (IOException) new IOException().initCause(e);
+    } catch (LoginException le) {
+      throw new IOException(le);
     }
   }
 
